tooling/nargo_cli/tests/snapshots/execution_success/integer_array_indexing/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
global ARRAY_LEN: u32 = 3;

fn main(arr: [Field; 3], x: u32) -> pub Field {
    let mut value: Field = arr[ARRAY_LEN - 1];
    value = value + arr[0 as u32];
    value = value + arr[1 as Field];
    value + (x as Field)
}
