tooling/nargo_cli/tests/snapshots/execution_success/integer_array_indexing/execute__tests__stdout.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stdout
---
brillig(inline) fn main f0 {
  b0(v1: [Field; 3], v2: u32):
    (no terminator instruction)
}
[integer_array_indexing] Circuit output: 0x08
